test/sema/typeck/struct/static-method-wrong-type-params.out
error: expected 0 type parameters but got 1.
--> static-method-wrong-type-params.dora:3:5
 | struct Foo(Int32)
 | fn f() {
 |     Foo[Int32]::bar();
       ~~~~~~~~~~~~~~~~~
 | }
 | 
1 error found.
