test/sema/typeck/struct/static-method-wrong-type-params.dora
struct Foo(Int32)
fn f() {
    Foo[Int32]::bar();
}
